playground/wasm_compiler/parse/minimal.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Start: peg$parseStart,
  };
  let peg$startRuleFunction = peg$parseStart;

  const peg$c0 = " ";
  const peg$c1 = "\r\n";
  const peg$c2 = "`";
  const peg$c3 = "[";
  const peg$c4 = "]";
  const peg$c5 = "{";
  const peg$c6 = "}";
  const peg$c7 = "(";
  const peg$c8 = ")";
  const peg$c9 = "|";
  const peg$c10 = "\x02";
  const peg$c11 = "\x03";
  const peg$c12 = "\\";
  const peg$c13 = "-";
  const peg$c14 = ".";
  const peg$c15 = "0x";
  const peg$c16 = "0r";
  const peg$c17 = "0b";
  const peg$c18 = "0u";
  const peg$c19 = "_";
  const peg$c20 = "###";
  const peg$c21 = "##";
  const peg$c22 = "#";
  const peg$c23 = "~";
  const peg$c24 = "!!";

  const peg$r0 = /^[\n\r]/;
  const peg$r1 = /^[^\r\n]/;
  const peg$r2 = /^[^`\r\n]/;
  const peg$r3 = /^[0-9]/;
  const peg$r4 = /^[0-1]/;
  const peg$r5 = /^[a-zA-Z]/;
  const peg$r6 = /^[a-zA-Z0-9_]/;
  const peg$r7 = /^[0-9a-fA-F]/;
  const peg$r8 = /^[!$@]/;
  const peg$r9 = /^[!@~]/;
  const peg$r10 = /^[!"#$%&'-=\^~|@;+:*,<>\/?]/;

  const peg$e0 = peg$literalExpectation(" ", false);
  const peg$e1 = peg$literalExpectation("\r\n", false);
  const peg$e2 = peg$classExpectation(["\n", "\r"], false, false, false);
  const peg$e3 = peg$anyExpectation();
  const peg$e4 = peg$literalExpectation("`", false);
  const peg$e5 = peg$classExpectation(["\r", "\n"], true, false, false);
  const peg$e6 = peg$literalExpectation("[", false);
  const peg$e7 = peg$literalExpectation("]", false);
  const peg$e8 = peg$literalExpectation("{", false);
  const peg$e9 = peg$literalExpectation("}", false);
  const peg$e10 = peg$literalExpectation("(", false);
  const peg$e11 = peg$literalExpectation(")", false);
  const peg$e12 = peg$literalExpectation("|", false);
  const peg$e13 = peg$literalExpectation("\x02", false);
  const peg$e14 = peg$literalExpectation("\x03", false);
  const peg$e15 = peg$classExpectation(["`", "\r", "\n"], true, false, false);
  const peg$e16 = peg$literalExpectation("\\", false);
  const peg$e17 = peg$literalExpectation("-", false);
  const peg$e18 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e19 = peg$literalExpectation(".", false);
  const peg$e20 = peg$literalExpectation("0x", false);
  const peg$e21 = peg$literalExpectation("0r", false);
  const peg$e22 = peg$literalExpectation("0b", false);
  const peg$e23 = peg$classExpectation([["0", "1"]], false, false, false);
  const peg$e24 = peg$literalExpectation("0u", false);
  const peg$e25 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false, false);
  const peg$e26 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false, false);
  const peg$e27 = peg$literalExpectation("_", false);
  const peg$e28 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false, false);
  const peg$e29 = peg$literalExpectation("###", false);
  const peg$e30 = peg$literalExpectation("##", false);
  const peg$e31 = peg$literalExpectation("#", false);
  const peg$e32 = peg$literalExpectation("~", false);
  const peg$e33 = peg$literalExpectation("!!", false);
  const peg$e34 = peg$classExpectation(["!", "$", "@"], false, false, false);
  const peg$e35 = peg$classExpectation(["!", "@", "~"], false, false, false);
  const peg$e36 = peg$classExpectation(["!", "\"", "#", "$", "%", "&", ["'", "="], "^", "~", "|", "@", ";", "+", ":", "*", ",", "<", ">", "/", "?"], false, false, false);

  function peg$f0() {    return null;  }
  function peg$f1() {    return null;  }
  function peg$f2() {    return location().start.column === 1;  }
  function peg$f3() {    return null;  }
  function peg$f4(lines) {    return lines;  }
  function peg$f5(expr) {    return expr;  }
  function peg$f6() {    return null;  }
  function peg$f7(head, tail) {
      if (tail.length === 0) {
          // 単一の要素のみの場合（すでに配列化されている密着演算子なども含む）
          return head;
      }
      // flat() によって、密着結合で生成された小さな配列（例: ["@_", "x"]）を
      // 親のリストに同じ次元で展開（フラット化）します。
      return [head, ...tail].flat();
  }
  function peg$f8(pre, core, post) {
      // プレフィックスもポストフィックスもない場合は、単一の要素を返す
      if (pre.length === 0 && post.length === 0) return core;
      
      // 密着している場合はフラットな配列として返す
      // Expression層の flat() によって全体のリストに溶け込みます
      return [...pre, core, ...post];
  }
  function peg$f9(pre) {    return pre.map(p => p + "_");  }
  function peg$f10(post) {    return post.map(p => "_" + p);  }
  function peg$f11(exprs) {    return [`"["`, ...(exprs || []), `"]"`];  }
  function peg$f12(exprs) {    return [`"{"`, ...(exprs || []), `"}"`];  }
  function peg$f13(exprs) {    return [`"("`, ...(exprs || []), `")"`];  }
  function peg$f14(expr) {    return [`"ABS_"`, expr, `"_ABS"`];  }
  function peg$f15(exprs) {    return [`"INDENT_"`, ...exprs, `"_DEDENT"`];  }
  function peg$f16(head, tail) {
      let result = [head];
      for (let e of tail) {
          if (e !== null) {
              result.push('"\\n"');
              result.push(e);
          }
      }
      return result.filter(e => e !== null);
  }
  function peg$f17(id) {return { type: 'Identifier', name: id };  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    let s0;

    s0 = peg$parseProgram();

    return s0;
  }

  function peg$parse__() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (input.charCodeAt(peg$currPos) === 32) {
      s2 = peg$c0;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (input.charCodeAt(peg$currPos) === 32) {
          s2 = peg$c0;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f0();
    }
    s0 = s1;

    return s0;
  }

  function peg$parse_() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (input.charCodeAt(peg$currPos) === 32) {
      s2 = peg$c0;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      if (input.charCodeAt(peg$currPos) === 32) {
        s2 = peg$c0;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
    }
    peg$savedPos = s0;
    s1 = peg$f1();
    s0 = s1;

    return s0;
  }

  function peg$parseSOL() {
    let s0;

    peg$savedPos = peg$currPos;
    s0 = peg$f2();
    if (s0) {
      s0 = undefined;
    } else {
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEOL() {
    let s0;

    if (input.substr(peg$currPos, 2) === peg$c1) {
      s0 = peg$c1;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s0 === peg$FAILED) {
      s0 = input.charAt(peg$currPos);
      if (peg$r0.test(s0)) {
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
    }

    return s0;
  }

  function peg$parseEOF() {
    let s0, s1;

    s0 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    peg$silentFails--;
    if (s1 === peg$FAILED) {
      s0 = undefined;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsecomment() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 96) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = input.charAt(peg$currPos);
      if (peg$r1.test(s3)) {
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = input.charAt(peg$currPos);
        if (peg$r1.test(s3)) {
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
      }
      peg$savedPos = s0;
      s0 = peg$f3();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseProgram() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parseSOL();
    if (s3 !== peg$FAILED) {
      s4 = peg$parseLine();
      if (s4 !== peg$FAILED) {
        s5 = [];
        s6 = peg$parseEOL();
        while (s6 !== peg$FAILED) {
          s5.push(s6);
          s6 = peg$parseEOL();
        }
        s2 = s4;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parseSOL();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseLine();
        if (s4 !== peg$FAILED) {
          s5 = [];
          s6 = peg$parseEOL();
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            s6 = peg$parseEOL();
          }
          s2 = s4;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    s2 = peg$parseEOF();
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f4(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLine() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseExpression();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parsecomment();
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f5(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsecomment();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f6();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseExpression() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseTerm();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse__();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseTerm();
        if (s5 !== peg$FAILED) {
          s3 = s5;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse__();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseTerm();
          if (s5 !== peg$FAILED) {
            s3 = s5;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f7(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTerm() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsePrefixes();
    s2 = peg$parseCore();
    if (s2 !== peg$FAILED) {
      s3 = peg$parsePostfixes();
      peg$savedPos = s0;
      s0 = peg$f8(s1, s2, s3);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseoperator();
    }

    return s0;
  }

  function peg$parsePrefixes() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseprefix();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseprefix();
    }
    peg$savedPos = s0;
    s1 = peg$f9(s1);
    s0 = s1;

    return s0;
  }

  function peg$parsePostfixes() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsepostfix();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsepostfix();
    }
    peg$savedPos = s0;
    s1 = peg$f10(s1);
    s0 = s1;

    return s0;
  }

  function peg$parseCore() {
    let s0;

    s0 = peg$parseBlock();
    if (s0 === peg$FAILED) {
      s0 = peg$parseAtom();
    }

    return s0;
  }

  function peg$parseBlock() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c3;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = [];
      s4 = peg$parseEOL();
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$parseEOL();
      }
      s4 = peg$parse_();
      s5 = peg$parseExpressions();
      if (s5 === peg$FAILED) {
        s5 = null;
      }
      s6 = peg$parse_();
      s7 = [];
      s8 = peg$parseEOL();
      while (s8 !== peg$FAILED) {
        s7.push(s8);
        s8 = peg$parseEOL();
      }
      s8 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 93) {
        s9 = peg$c4;
        peg$currPos++;
      } else {
        s9 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s9 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f11(s5);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 123) {
        s1 = peg$c5;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e8); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        s3 = [];
        s4 = peg$parseEOL();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseEOL();
        }
        s4 = peg$parse_();
        s5 = peg$parseExpressions();
        if (s5 === peg$FAILED) {
          s5 = null;
        }
        s6 = peg$parse_();
        s7 = [];
        s8 = peg$parseEOL();
        while (s8 !== peg$FAILED) {
          s7.push(s8);
          s8 = peg$parseEOL();
        }
        s8 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 125) {
          s9 = peg$c6;
          peg$currPos++;
        } else {
          s9 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e9); }
        }
        if (s9 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f12(s5);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 40) {
          s1 = peg$c7;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e10); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          s3 = [];
          s4 = peg$parseEOL();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseEOL();
          }
          s4 = peg$parse_();
          s5 = peg$parseExpressions();
          if (s5 === peg$FAILED) {
            s5 = null;
          }
          s6 = peg$parse_();
          s7 = [];
          s8 = peg$parseEOL();
          while (s8 !== peg$FAILED) {
            s7.push(s8);
            s8 = peg$parseEOL();
          }
          s8 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 41) {
            s9 = peg$c8;
            peg$currPos++;
          } else {
            s9 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e11); }
          }
          if (s9 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f13(s5);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 124) {
            s1 = peg$c9;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e12); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parseExpression();
            if (s2 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 124) {
                s3 = peg$c9;
                peg$currPos++;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e12); }
              }
              if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$f14(s2);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 2) {
              s1 = peg$c10;
              peg$currPos++;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e13); }
            }
            if (s1 !== peg$FAILED) {
              s2 = peg$parse_();
              s3 = [];
              s4 = peg$parseEOL();
              while (s4 !== peg$FAILED) {
                s3.push(s4);
                s4 = peg$parseEOL();
              }
              s4 = peg$parse_();
              s5 = peg$parseExpressions();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                s7 = [];
                s8 = peg$parseEOL();
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parseEOL();
                }
                s8 = peg$parse_();
                if (input.charCodeAt(peg$currPos) === 3) {
                  s9 = peg$c11;
                  peg$currPos++;
                } else {
                  s9 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e14); }
                }
                if (s9 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s0 = peg$f15(s5);
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseExpressions() {
    let s0, s1, s2, s3, s4, s5, s6;
